--- a/sass/blocks/_articles.sass
+++ b/sass/blocks/_articles.sass
@@ -78,7 +78,7 @@
       display: -webkit-box
       -webkit-line-clamp: 3
       -webkit-box-orient: vertical
-      height: 3.5em
+      height: 3.7em
     &__text
       @include font-param(14px, 400, 20px)
       color: #4B5157
