--- a/sass/blocks/_career.sass
+++ b/sass/blocks/_career.sass
@@ -185,7 +185,8 @@
         display: -webkit-box
         -webkit-line-clamp: 3
         -webkit-box-orient: vertical
-        height: 3.5em
+        height: 4em
+        
     &__text
       &--two, &--three, &--four
         margin-bottom: 45px
@@ -198,4 +199,4 @@
         display: -webkit-box
         -webkit-line-clamp: 3
         -webkit-box-orient: vertical
-        height: 3.9em
+        height: 4.4em
