--- a/sass/media/_max992.sass
+++ b/sass/media/_max992.sass
@@ -84,6 +84,8 @@
     &-work
       &__descr
         padding-top: 72px
+      &__title
+        height: 4em
     &-tags
       &__links
         padding: 18px 8px 18px 23px
